# Slosh

./: .gitignore  CMakeLists.txt  main.cpp
api/: ChemicalEquation.cpp  ChemicalEquation.h  Container.cpp  Container.h  FluidData.cpp  FluidData.h  MaterialData.cpp  MaterialData.h  MaterialFormula.cpp  MaterialFormula.h  Substance.cpp  Substance.h
icons/: icons.qrc
resources/csv/: Reactants.csv  csv.qrc
resources/icons/: icons.qrc
resources/images/: images.qrc
util/: ChemistryHelper.cpp  ChemistryHelper.h  Clickable.cpp  Clickable.h  Compounds.csv  Elements.csv  GlobalClickHandler.cpp  GlobalClickHandler.h  TooltipRichTextFilter.cpp  TooltipRichTextFilter.h
widgets/: Canvas.cpp  Window.cpp  Window.h
widgets/canvas/: Canvas.cpp  Canvas.h  Container.cpp  Container.h
widgets/sidebar/: EditFluidSidebar.cpp  EditFluidSidebar.h  NewContainerSidebar.cpp  NewContainerSidebar.h  NewFluidSidebar.cpp  NewFluidSidebar.h  RemoveFluidSidebar.cpp  RemoveFluidSidebar.h  SelectContainerSidebar.cpp  SelectContainerSidebar.h  Sidebar.cpp  Sidebar.h  SidebarWidget.cpp  SidebarWidget.h
widgets/toolbar/: Toolbar.cpp  Toolbar.h  ToolbarActions.cpp  ToolbarActions.h  ToolbarButton.cpp  ToolbarButton.h
widgets/util/: NumberInput.cpp  NumberInput.h  TextInput.cpp  TextInput.h
